[workspace]
members = [
    "codegen",
    "spx",
]

[workspace.package]
version = "0.3.0"
description = "File archive library for bundling and protecting resources using compile-time code generation"
edition = "2018"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "Apache-2.0"
repository = "https://github.com/storycraft/spx"

[workspace.dependencies]
spx = { version = "0.3", path = "./spx" }

phf = { version = "0.11", default-features = false }
phf_generator = "0.11"
phf_shared = "0.11"
const-fnv1a-hash = "1.1.0"
sha2 = "0.10.7"
chacha20 = "0.9.1"
