[package]
name = "spx-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spx = { workspace = true }

phf_generator = { workspace = true }
const-fnv1a-hash = { workspace = true }
easy-ext = "1.0.1"
walkdir = "2.3.3"
path-slash = "0.2.1"
sha2 = { workspace = true }
chacha20 = { workspace = true }
