[package]
name = "spx"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phf = { workspace = true }
phf_shared = { workspace = true }
const-fnv1a-hash = { workspace = true }
sha2 = { workspace = true }
chacha20 = { workspace = true }
futures = { version = "0.3", feature = ["io"] }
pin-project = "1.1.2"
